2023-09-29T00:42:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6345777591 # 1943
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-29
* notice: last 14d: unq all: 3 24
* notice: prev accum: outdated-unq outdated-all / unq all: 737 1364 / 752 1388
* notice: next accum: outdated-unq outdated-all / unq all: 738 1365 / 752 1389
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-09-14] / [2023-09-28]

2023-09-28T08:12:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6336267204 # 1941
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
* notice: last 14d: unq all: 4 24
* notice: prev accum: outdated-unq outdated-all / unq all: 737 1364 / 751 1387
* notice: next accum: outdated-unq outdated-all / unq all: 737 1364 / 752 1388
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-28]

2023-09-28T00:42:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6333080086 # 1940
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
* notice: last 14d: unq all: 4 23
* notice: prev accum: outdated-unq outdated-all / unq all: 735 1362 / 751 1386
* notice: next accum: outdated-unq outdated-all / unq all: 737 1364 / 751 1387
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-09-13] / [2023-09-27]

2023-09-27T08:12:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6323192121 # 1938