@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-29T00:42:48Z",
+  "timestamp" : "2023-09-29T08:12:14Z",
   "count_outdated" : 1365,
   "uniques_outdated" : 738,
-  "count" : 1389,
-  "uniques" : 752,
+  "count" : 1390,
+  "uniques" : 753,
   "clones" : [
     {
       "timestamp": "2023-09-16T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
